--- a/Mojeauto/web/WEB-INF/web.xml
+++ b/Mojeauto/web/WEB-INF/web.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	 version="3.0">
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <servlet>
+        <servlet-name>TEMP_PopulateDB</servlet-name>
+        <servlet-class>pl.polsl.io.servlet.TEMP_PopulateDB</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TEMP_PopulateDB</servlet-name>
+        <url-pattern>/TEMP_PopulateDB/*</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>Homepage</servlet-name>
+        <jsp-file>/Homepage.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Homepage</servlet-name>
+        <url-pattern>/Homepage/*</url-pattern>
+    </servlet-mapping>
+    
+    
     <session-config>
         <session-timeout>
             30
