dodano wyswietlanie pakietow z bd i przyciski zakupu przy zalogowaniu

--- a/Mojeauto/web/WEB-INF/web.xml
+++ b/Mojeauto/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>ManageVehicles</servlet-name>
         <servlet-class>pl.polsl.io.servlet.ManageVehicles</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PackageSales</servlet-name>
+        <servlet-class>pl.polsl.io.servlet.PackageSales</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>TEMP_PopulateDB</servlet-name>
         <url-pattern>/TEMP_PopulateDB</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>ManageVehicles</servlet-name>
         <url-pattern>/ManageVehicles</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PackageSales</servlet-name>
+        <url-pattern>/PackageSales</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
